# codenotes

./: .editorconfig  .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.bat  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: linter.yml  tests.yml
codenotes/: __init__.py  __main__.py  abstract.py  annotations.py  exceptions.py  logger.py
codenotes/cli/: __init__.py  category.py  notes.py  print_formatted.py  task.py  tasks.py  theme.py
codenotes/console/: __init__.py  tasks.py  todo.py
codenotes/db/: __init__.py  connection.py  entities.py
codenotes/db/dao/: category.py  task.py
codenotes/db/models/: __init__.py  categories.py  category.py  notes.py  task.py  tasks.py
codenotes/db/repository/: __init__.py  tasks.py
codenotes/db/utilities/: __init__.py  notes.py  notes_categories.py  tasks.py  tasks_categories.py  todo.py
codenotes/tui/: __init__.py  app.py  windows.py
codenotes/ui/: app.py
codenotes/ui/screens/: __init__.py
codenotes/util/: __init__.py  args.py  help.py  menu.py  sql.py  text.py
codenotes/utils/: __init__.py  text.py
tests/: test_parse_args.py
tests/cli/: test_category.py  test_console.py  test_notes.py  test_task.py  test_tasks.py
tests/console/: test_console.py  test_task.py  test_todo.py
tests/tui/: test_tui.py  test_tui_notes.py  test_tui_tasks.py
tests/util/: test_args.py
tests/utils/: test_utils.py
